[#ITEM RELEASE] fix cropper responsive

--- a/client/app/routes/Release/Step1Cover/ImageCropper/Modal/styles.sass
+++ b/client/app/routes/Release/Step1Cover/ImageCropper/Modal/styles.sass
@@ -28,14 +28,24 @@
   margin: auto
 
 .content
-  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
+  // -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
+  // box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
   position: relative
   height: 800px
-  border: 1px solid #999
-  border: 1px solid rgba(0, 0, 0, 0.2)
-  border-radius: 6px
-  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5)
-  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5)
+  background: rgba(255, 255, 255, 0.2)
+  // border: 1px solid #999
+  // border: 1px solid rgba(0, 0, 0, 0.2)
+  // border-radius: 6px
+  // -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5)
+  // box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5)
   background-clip: padding-box
   outline: 0
+
+.cropper
+  margin: 0 auto
+
+.controller
+  border: 1px solid #fff
+  margin: 0 auto
+  width: 300px
+  height: 150px
