--- a/client/app/routes/Release/Step1Cover/ImageCropper/styles.sass
+++ b/client/app/routes/Release/Step1Cover/ImageCropper/styles.sass
@@ -2,3 +2,7 @@
   margin: 20px auto
   width: 450px
   height: 450px
+.bottomController
+  border: 1px solid #fff
+  width: 300px
+  height: 150px
